Till user Profile and follower Profile working copy

--- a/InstaFeed/Base.lproj/Main.storyboard
+++ b/InstaFeed/Base.lproj/Main.storyboard
@@ -16,18 +16,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaY-mr-L9p">
-                                <rect key="frame" x="190" y="540" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Sync"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaY-mr-L9p">
+                                <rect key="frame" x="31" y="430" width="352" height="36"/>
+                                <color key="backgroundColor" red="1" green="0.5357794817" blue="0.31477822719999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="20"/>
+                                <state key="normal" title=" Click here to Login and Sync with watch ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="SyncClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KXn-Ta-mHQ"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ImageBG" translatesAutoresizingMaskIntoConstraints="NO" id="FWM-Ll-dST">
+                                <rect key="frame" x="82" y="144" width="250" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="Bqn-Fh-vsk"/>
+                                    <constraint firstAttribute="height" constant="130" id="CPt-u7-SLg"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="FWM-Ll-dST" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CKS-WG-hu3"/>
+                            <constraint firstItem="FWM-Ll-dST" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="n78-AX-XBg"/>
+                            <constraint firstItem="xaY-mr-L9p" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nbv-s8-Mi8"/>
+                            <constraint firstItem="xaY-mr-L9p" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xq4-CO-nJb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="syncButton" destination="xaY-mr-L9p" id="Hq2-BM-AAu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -35,6 +54,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ImageBG" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
