--- a/InstaFeed WatchKit App/Base.lproj/Interface.storyboard
+++ b/InstaFeed WatchKit App/Base.lproj/Interface.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="17506" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="18122" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38"/>
     <dependencies>
         <deployment identifier="watchOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="17500"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="18022"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -57,6 +58,7 @@
                                                             <group alignment="left" radius="4" id="OiN-Zc-J8b">
                                                                 <items>
                                                                     <imageView alignment="center" id="y8O-eA-5Gm"/>
+                                                                    <movie width="1" alignment="left" id="N1O-YH-fR4"/>
                                                                 </items>
                                                             </group>
                                                             <group width="1" alignment="left" id="D4u-rJ-GGT">
@@ -95,6 +97,7 @@
                                                 <outlet property="feedImage" destination="y8O-eA-5Gm" id="x6k-ut-ArY"/>
                                                 <outlet property="feedLikeButton" destination="k2W-Sl-AcO" id="lJP-B3-js9"/>
                                                 <outlet property="feedPostTime" destination="Jbs-3l-NhG" id="VVt-fU-Up5"/>
+                                                <outlet property="moviePlayer" destination="N1O-YH-fR4" id="cjM-9t-atm"/>
                                                 <outlet property="shareButton" destination="Mbw-Kx-tf6" id="BPn-7f-bqc"/>
                                                 <outlet property="titleLabel" destination="nod-wf-9B1" id="Ynq-6X-W7j"/>
                                                 <outlet property="userImage" destination="AMh-pH-cSg" id="U8K-Jf-hDk"/>
@@ -109,11 +112,11 @@
                                                                 <items>
                                                                     <group width="1" alignment="center" verticalAlignment="bottom" layout="vertical" id="fXv-nh-mxO">
                                                                         <items>
-                                                                            <group width="1" alignment="center" verticalAlignment="bottom" id="u8i-vn-Gfd">
+                                                                            <group width="120" alignment="center" verticalAlignment="bottom" id="u8i-vn-Gfd">
                                                                                 <items>
                                                                                     <label alignment="center" verticalAlignment="bottom" text="Loading..." textAlignment="justified" minimumScaleFactor="0.59999999999999998" id="aCb-1Q-6w8"/>
                                                                                     <separator height="1" heightAdjustment="-4" alignment="right" verticalAlignment="bottom" id="4y3-76-JiL">
-                                                                                        <color key="color" red="0.32183412" green="1" blue="0.34561161839999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                        <color key="color" name="AccentColor"/>
                                                                                     </separator>
                                                                                 </items>
                                                                             </group>
@@ -339,5 +342,8 @@
         <image name="Comment" width="399" height="375"/>
         <image name="Liked" width="18" height="16"/>
         <image name="shareiCon" width="480" height="480"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
