--- a/InstaFeed/Base.lproj/LaunchScreen.storyboard
+++ b/InstaFeed/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,15 +14,52 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashbg1" translatesAutoresizingMaskIntoConstraints="NO" id="a2F-5b-XLD">
+                                <rect key="frame" x="0.0" y="603" width="414" height="293"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="a2F-5b-XLD" secondAttribute="height" multiplier="414:293" id="uhh-8I-pGO"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashbg2" translatesAutoresizingMaskIntoConstraints="NO" id="ZIv-66-PB2">
+                                <rect key="frame" x="0.0" y="526" width="414" height="370"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ZIv-66-PB2" secondAttribute="height" multiplier="207:185" id="aPU-SX-KTm"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Watch Instagram" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wOW-dJ-St2">
+                                <rect key="frame" x="79" y="422.5" width="256" height="51"/>
+                                <fontDescription key="fontDescription" name="KohinoorGujarati-Regular" family="Kohinoor Gujarati" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZIv-66-PB2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1cZ-he-Cp6"/>
+                            <constraint firstItem="a2F-5b-XLD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3N4-EK-RLx"/>
+                            <constraint firstAttribute="bottom" secondItem="ZIv-66-PB2" secondAttribute="bottom" id="8aD-vn-52z"/>
+                            <constraint firstItem="a2F-5b-XLD" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="G9y-2E-HSy"/>
+                            <constraint firstItem="wOW-dJ-St2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="MlG-UI-fp8"/>
+                            <constraint firstItem="wOW-dJ-St2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="aDC-ZR-XKF"/>
+                            <constraint firstItem="ZIv-66-PB2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bDK-VN-TO6"/>
+                            <constraint firstAttribute="bottom" secondItem="a2F-5b-XLD" secondAttribute="bottom" id="jor-7z-Q3o"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splashbg1" width="375" height="274"/>
+        <image name="splashbg2" width="375" height="350"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
